further reduce scale. Fix X overflow

--- a/app/static/main.css
+++ b/app/static/main.css
@@ -12,11 +12,11 @@ body {
 }
 
 .placeholder {
-    height: 3rem;
+    height: 1.5rem;
 }
 
 .precision-placeholder {
-    height: 1rem;
+    height: 0.7rem;
 }
 
 .search-title {
